removed /api prefix to better match requirements doc
